--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -17,6 +17,7 @@
   "license": "ISC",
   "description": "HeroTasks Backend",
   "dependencies": {
+    "axios": "^1.9.0",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -24,6 +25,7 @@
     "pg": "^8.15.5"
   },
   "devDependencies": {
+    "@types/axios": "^0.14.4",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/morgan": "^1.9.9",
