--- a/BackEnd/package.json
+++ b/BackEnd/package.json
@@ -18,6 +18,7 @@
   "description": "HeroTasks Backend",
   "dependencies": {
     "axios": "^1.9.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
@@ -26,6 +27,7 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.4",
+    "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.1",
     "@types/morgan": "^1.9.9",
