--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@eslint/js": "^9.22.0",
     "@types/axios": "^0.14.4",
+    "@types/bcryptjs": "^3.0.0",
     "@types/react": "^19.0.10",
     "@types/react-dom": "^19.0.4",
     "@types/react-router-dom": "^5.3.3",
