--- a/BackEnd/tsconfig.json
+++ b/BackEnd/tsconfig.json
@@ -109,5 +109,8 @@
     /* Completeness */
     // "skipDefaultLibCheck": true,                      /* Skip type checking .d.ts files that are included with TypeScript. */
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
-  }
+  },
+
+  "include": ["src/**/*", "types/**/*", "types"],
+  "exclude": ["node_modules"]
 }
