--- a/FrontEnd/package.json
+++ b/FrontEnd/package.json
@@ -11,7 +11,9 @@
   },
   "dependencies": {
     "axios": "^1.9.0",
+    "bootstrap": "^5.3.6",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.10",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.6.0",
     "sass": "^1.87.0"
